Basic implementation, while breakpoint M needs some work

--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -28,6 +28,11 @@
       border-top: 6px solid $brand_core_family;
     }
 
+    body.ar & {
+      left: 0;
+      right: auto;
+    }
+
     .template--500 & {
       display: none;
     }
