--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -32,6 +32,11 @@
     // width: auto;
     width: 71%;
     position: relative;
+
+    body.ar & {
+      margin-left: -20px;
+      margin-right: 0;
+    }
   }
 
   .Distributor--start {
@@ -49,11 +54,21 @@
     .template--pages-home & {
       position: relative;
     }
+
+    body.ar & {
+      left: 120px;
+      right: 0;
+    }
   }
 
   .Distributor__advanced-filter-trigger-wrapper {
     position: absolute;
     right: 0;
+
+    body.ar & {
+      left: 0;
+      right: auto;
+    }
   }
 
   #new_search_form .input.string {
@@ -75,12 +90,22 @@
   .main-search__submit {
     position: absolute;
     right: 0;
+
+    body.ar & {
+      left: 0;
+      right: auto;
+    }
   }
 
   .search-form--input-wrapper {
     position: absolute;
     right: 75px;
     left: 25px;
+
+    body.ar & {
+      right: 25px;
+      left: 75px;
+    }
 
     .template--pages-home & {
       position: relative;
