--- a/app/assets/stylesheets/modules/_logo.scss
+++ b/app/assets/stylesheets/modules/_logo.scss
@@ -22,6 +22,10 @@
     background-size: 215px 88px;
   }
 
+  body.ar & {
+    float: right;
+  }
+
   a {
     display: block;
     width: inherit;
