--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html class='no-js' lang=I18n.locale
     = render '/layouts/partials/javascript_config'
     = csrf_meta_tags
 
-  body class="#{@current_section} template--#{controller_name}-#{action_name}" data-section=@current_section
+  body class="#{@current_section} ar template--#{controller_name}-#{action_name}" data-section=@current_section
 
 
     .page-wrap
