Mini-feature: avoid automated translation of code_word by translate widget

--- a/app/views/offers/show/_next_steps.html.slim
+++ b/app/views/offers/show/_next_steps.html.slim
@@ -6,5 +6,6 @@ section.section-content.section-content--nextsteps
       p
         br
         = t '.code_word'
-        b
-          =< offer.code_word
+        span.notranslate
+          b
+            =< offer.code_word
