--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -70,3 +70,5 @@ footer.footer-main
             /       new google.translate.TranslateElement({pageLanguage: 'de', includedLanguages: 'ar,en,fr,pl,ru,tr', gaTrack: true, gaId: 'UA-59626864-1'}, 'google_translate_element');
             /     }
             /   script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"
+
+#qtip_welcome_overlay
