--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -628,6 +628,10 @@
     margin-top: -68px;
     height: 68px;
     content: "";
+
+    .template--offers-index & {
+      display: none;
+    }
   }
 
 }
