Cherry-picked fix for clarat-org/clarat#666 to deploy it in advance of translations

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -607,6 +607,10 @@
     margin-top: -68px;
     height: 68px;
     content: "";
+
+    .template--offers-index & {
+      display: none;
+    }
   }
 
 }
