new FAQ code with cells gem, optimized code for expandability and added new german fab-locales

--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -1,4 +1,6 @@
 - provide(:title, t('.title'))
+= cell(:frequently_asked_questions)
+
 - cache ['faq_page', I18n.t] do
 
   / TODO: Put in real question an move them to the locales
