--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -1,4 +1,4 @@
-- cache ['start_header', current_section] do
+- cache ['start_header', current_section, I18n.locale] do
 
   header.header-main.header-main--wide
     .header-main__foreground.wrapper-inner
@@ -26,7 +26,7 @@
                                              labels: :long,
                                              current_section: current_section
 
-      - cache "category_navigation_#{current_section}" do
+      - cache ['category_navigation', current_section, I18n.locale] do
 
         nav.nav-sections
           h3.nav-sections__headline = t '.category_headline'
