--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,14 +12,14 @@ html class='no-js' lang=I18n.locale
     - canonical_url = content_for(:canonical_url) || default_canonical_url
     link rel='canonical' href=canonical_url
 
-    - cache 'html_head' do
+    - cache ['html_head', I18n.locale] do
       = render 'layouts/partials/head'
     = render '/layouts/partials/javascript_config'
     = csrf_meta_tags
 
   body class="#{@current_section} #{I18n.locale} template--#{controller_name}-#{action_name}" data-section=@current_section
     .page-wrap
-      - cache 'banner' do
+      - cache ['banner', I18n.locale] do
         = render '/layouts/partials/banner'
       = render '/layouts/partials/nav_lang'
       #Flash-messages
