for #554 - home page category links respect locale

--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -43,4 +43,5 @@
                     'search_form[generated_geolocation]' => \
                       search_form.generated_geolocation,
                     'search_form[section]' => \
-                      current_section)
+                      current_section),
+                    locale: I18n.locale
