for #554 - change old auto translation display style, add translation markdown to orga#show

--- a/app/assets/stylesheets/modules/_automated-translation.scss
+++ b/app/assets/stylesheets/modules/_automated-translation.scss
@@ -4,24 +4,22 @@
 //
 // ---------------------------------------------------------------
 
-.Automated-translation {
-  position: relative;
-  background: repeating-linear-gradient(
-    45deg,
-    rgba(255,255,255,0),
-    rgba(255,255,255,0) 5px,
-    rgba(244,181,40,0.3) 5px,
-    rgba(244,181,40,0.3) 10px
-  );
+h2 .Automated-translation {
+  display: inline-block;
+  padding-right: 40px;
 }
 
-.Automated-translation__text {
-  padding: 5px 5px 25px 10px;
+h2 .Automated-translation__text {
+  display: inline-block;
 }
 
-.Automated-translation__attribution {
+.Automated-translation__warning {
   position: absolute;
   bottom: 0;
   right: 0;
-  background: rgba(255,255,255,0.5);
+  cursor: help;
+}
+
+h2 .Automated-translation__warning {
+  bottom: 8px;
 }
