for #554 - small translation & display fix

--- a/app/assets/stylesheets/modules/_automated-translation.scss
+++ b/app/assets/stylesheets/modules/_automated-translation.scss
@@ -4,6 +4,10 @@
 //
 // ---------------------------------------------------------------
 
+.Automated-translation {
+  position: relative;
+}
+
 h2 .Automated-translation {
   display: inline-block;
   padding-right: 40px;
