for #554 - move automated translation warnings to box-headers

--- a/app/assets/stylesheets/modules/_automated-translation.scss
+++ b/app/assets/stylesheets/modules/_automated-translation.scss
@@ -27,3 +27,8 @@ h2 .Automated-translation__text {
 h2 .Automated-translation__warning {
   bottom: 8px;
 }
+
+h3 .Automated-translation__warning {
+  position: static;
+  float: right;
+}
