--- a/app/cells/frequently_asked_questions/section.slim
+++ b/app/cells/frequently_asked_questions/section.slim
@@ -1,6 +1,6 @@
 section
   h3.section-question-group__headline
-    = I18n.t ".section_#{@section_number}.heading"
+    = I18n.t ".section_#{@section_id}.heading"
   .section-question-group__body
-    - (@question_count - 1).times do |question_number|
-      = cell(:frequently_asked_questions).call(:question, @section_number, question_number + 1)
+    - @question_ids.each do |question_id|
+      = cell(:frequently_asked_questions).(:question, @section_id, question_id)
