clarat-org/clarat#659 different caching, minor fixes and remove old FAQ texts from all locale files

--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -1,2 +1,3 @@
 - provide(:title, t('.title'))
-== cell(:frequently_asked_questions)
+- cache ['faq_page', I18n.locale] do
+  == cell(:frequently_asked_questions)
