for #554 - remove automation warning from non-automated translations

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -10,7 +10,7 @@
         h2.page-detail__title
           == translation_block @offer.translation_automated? do
             = @offer.name
-            = automation_warning
+            = automation_warning @offer.translation_automated?
         /.page-detail__icons
         /  - @offer.categories.mains.each do |main_tag|
         /    .page-detail__icon title=main_tag.name class="page-detail__icon--#{main_tag.icon}"
@@ -23,7 +23,7 @@
         section.section-content.section-content--what
           h3.section-content__title
             = t '.what'
-            = automation_warning
+            = automation_warning @offer.translation_automated?
           .section-content__body
             == translation_block @offer.translation_automated? do
               == @offer.description
