--- a/app/views/offers/show/_next_steps.html.slim
+++ b/app/views/offers/show/_next_steps.html.slim
@@ -1,7 +1,7 @@
 section.section-content.section-content--nextsteps
   h3.section-content__title
     = t '.heading'
-    = automation_warning
+    = automation_warning @offer.translation_automated?
   .section-content__body
     - if offer.next_steps.in_current_locale.any?
       = offer.next_steps_for_current_locale
