Convert hard coded labels to locale references

--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -15,4 +15,4 @@ header.header-main
                                              labels: :short,
                                              current_section: current_section
       .Distributor__advanced-filter-trigger-wrapper
-        a.main-search__advanced-filter[href='#'] Suchoptionen einblenden
+        a.main-search__advanced-filter[href='#'] = t 'js.search.form_more_label'
