Fix search form for english label lengths

--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -87,11 +87,19 @@
 
 #search_form_query {
   padding-left: 62px;
+
+  body.en & {
+    padding-left: 68px;
+  }
 }
 
 #search_form_search_location {
   padding-left: 52px;
   border-radius: 0;
+
+  body.en & {
+    padding-left: 79px;
+  }
 }
 
 .main-search__submit {
