--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -218,6 +218,10 @@
 
     #search_form_search_location {
       padding-left: 40px;
+
+      body.en & {
+        padding-left: 60px;
+      }
     }
 
     #search_form_query,
