--- a/app/views/offers/show/_next_steps.html.slim
+++ b/app/views/offers/show/_next_steps.html.slim
@@ -1,12 +1,15 @@
+- has_next_steps = offer.next_steps.in_current_locale.any?
+- translation_automated = offer.translation_automated?
+
 section.section-content.section-content--nextsteps
   h3.section-content__title
     = t '.heading'
-    = automation_warning @offer.translation_automated?
+    = automation_warning(!has_next_steps && translation_automated)
   .section-content__body
-    - if offer.next_steps.in_current_locale.any?
+    - if has_next_steps
       = offer.next_steps_for_current_locale
     - else
-      == translation_block offer.translation_automated? do
+      == translation_block translation_automated do
         == offer.old_next_steps
 
     - if offer.code_word && !offer.code_word.empty?
