more fixes for english translations

--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -1,5 +1,5 @@
 - provide(:title, t('.title') )
-- cache ['about_page', I18n.t] do
+- cache ['about_page', I18n.locale] do
 
   main.content-main.content-main--wide.template--pages-about
     .wrapper-inner
