--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -1,5 +1,5 @@
 - provide :title, t('.title')
-- cache ['impressum_page', I18n.t] do
+- cache ['impressum_page', I18n.locale] do
 
   main.content-main.content-main--wide
     .wrapper-inner
