Basic implementation for Desktop

--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -15,5 +15,5 @@ header.header-main
                                              labels: :short,
                                              current_section: current_section
       .Distributor__advanced-filter-trigger-wrapper
-        a.main-search__advanced-filter.tooltip--welcome.tooltip--advancedsearch[data-tooltip-text=t('shareds.tooltips.welcome.advanced_search') href='#']
+        a.main-search__advanced-filter.tooltip--welcome.tooltip--advancedsearch[title=t('shareds.tooltips.welcome.advanced_search') href='#']
           = t('js.search.form_more_label')
