--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -11,7 +11,7 @@
       nav.nav-welt.nav-welt--start
         ul.nav-welt__list
           - SectionFilter::IDENTIFIER.each do |section|
-            li.nav-welt__listitem.nav-welt__listitem--start.tooltip--welcome.tooltip--welt[data-tooltip-text=t('shareds.tooltips.welcome.world_switch')]
+            li.nav-welt__listitem.nav-welt__listitem--start.tooltip--welcome.tooltip--welt[class="tooltip--welt-#{section}" title=t("shareds.tooltips.welcome.world_switch.#{section}")]
               = link_to section, home_path(section: section),
                         id: "clarat--#{section}"
 
