fix automation warning code style & bug

--- a/app/assets/stylesheets/modules/sections/_section-content.scss
+++ b/app/assets/stylesheets/modules/sections/_section-content.scss
@@ -48,7 +48,9 @@
   font-size: 20px;
 
   .section-content--nextsteps &,
-  .section-content--what & {
+  .section-content--what &,
+  .section-content--who &,
+  .section-content--alloffers & {
     position: relative;
     padding-right: 70px;
   }
