--- a/app/views/offers/show/_next_steps.html.slim
+++ b/app/views/offers/show/_next_steps.html.slim
@@ -4,9 +4,7 @@
 section.section-content.section-content--nextsteps
   h3.section-content__title
     = t '.heading'
-    - if offer.translation_automated?
-      .Automated-translation__wrapper
-        = automation_warning(!has_next_steps && translation_automated)
+    == automation_warning(!has_next_steps && translation_automated)
   .section-content__body
     - if has_next_steps
       = offer.next_steps_for_current_locale
