make search result links clickable even when there is no text content

--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -76,6 +76,7 @@
     display: block;
     height: inherit;
     text-decoration: none;
+    min-height: 24px;
 
     &:hover {
       color: $brand_brown;
