--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -14,7 +14,7 @@ header.header-main
       = render '/offers/shared/search_form', search_form: search_form,
                                              labels: :short,
                                              current_section: current_section
-      .Distributor__advanced-filter-trigger-wrapper
-        a.main-search__advanced-filter.tooltip--welcome.tooltip--advancedsearch[title=t('shareds.tooltips.welcome.advanced_search') href='#']
+      .Distributor__advanced-filter-trigger-wrapper.tooltip--welcome.tooltip--advancedsearch[title=t('shareds.tooltips.welcome.advanced_search') href='#']
+        a.main-search__advanced-filter[href='#']
           = t('js.search.form_more_label')
 
