--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -358,6 +358,8 @@
 
   .main-search__advanced-filter--within-content-main {
     margin: 0 -15px;
+    position: relative;
+    transform: initial;
   }
 
   .content-main {
