--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -62,3 +62,4 @@ footer.footer-main
             /   script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"
 
 #qtip_welcome_overlay
+#clone-container
